log
Fri Mar 13 05:49:20 PM UTC 2026: 
 tests:  0|5
total_score: 0/70
7d0769a
Fri Mar 20 05:49:23 PM UTC 2026: 
 exercises.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  1|4
total_score: 10/70
cb007c3
Fri Mar 20 06:06:42 PM UTC 2026: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: expected expression before ‘int’
   46 |    *int elemento = malloc(sizeof(int));
      |     ^~~
0135092
Fri Mar 20 06:07:27 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1d1584d
Fri Mar 20 06:12:05 PM UTC 2026: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:46:5: error: expected expression before ‘int’
   46 |    *int elemento = malloc(sizeof(int));
      |     ^~~
exercises.c:49:11: error: ‘elemento’ undeclared (first use in this function)
   49 |          *elemento = i + 1;
      |           ^~~~~~~~
exercises.c:49:11: note: each undeclared identifier is reported only once for each function it appears in
0a605ec
Fri Mar 20 06:13:03 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
1345205
Fri Mar 20 06:13:45 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|4
total_score: 10/70
9516f92
Fri Mar 20 06:17:20 PM UTC 2026: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:49:25: error: initialization of ‘int’ from ‘void *’ makes integer from pointer without a cast [-Wint-conversion]
   49 |          int elemento = malloc(sizeof(int));
      |                         ^~~~~~
exercises.c:50:10: error: invalid type argument of unary ‘*’ (have ‘int’)
   50 |          *elemento = i + 1;
      |          ^~~~~~~~~
exercises.c:51:23: error: invalid type argument of unary ‘*’ (have ‘int’)
   51 |          pushFront(L, *elemento);
      |                       ^~~~~~~~~
f6bdd00
Fri Mar 20 06:17:44 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:51:23: error: passing argument 2 of ‘pushFront’ makes pointer from integer without a cast [-Wint-conversion]
   51 |          pushFront(L, *elemento);
      |                       ^~~~~~~~~
      |                       |
      |                       int
In file included from exercises.c:6:
arraylist.h:17:31: note: expected ‘void *’ but argument is of type ‘int’
   17 | void pushFront(List *L, void *dato);
      |                         ~~~~~~^~~~
4d2da3f
Fri Mar 20 06:18:19 PM UTC 2026: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  2|3
total_score: 20/70
a3aca6c
Fri Mar 20 06:23:11 PM UTC 2026: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:9: error: ‘elemento’ undeclared (first use in this function)
   53 |    free(elemento);
      |         ^~~~~~~~
exercises.c:53:9: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       suma += *first(L);
      |               ^~~~~~~~~
exercises.c:65:15: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
613ee05
Fri Mar 20 06:23:31 PM UTC 2026: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
exercises.c: In function ‘crea_lista’:
exercises.c:53:10: error: ‘elemento’ undeclared (first use in this function)
   53 |    free(*elemento);
      |          ^~~~~~~~
exercises.c:53:10: note: each undeclared identifier is reported only once for each function it appears in
exercises.c: In function ‘sumaLista’:
exercises.c:65:15: error: dereferencing ‘void *’ pointer [-Werror]
   65 |       suma += *first(L);
      |               ^~~~~~~~~
exercises.c:65:15: error: void value not ignored as it ought to be
cc1: all warnings being treated as errors
9e8b400
